# codex-patcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: build.rs  config.rs  discovery.rs  dispatch.rs  elevation.rs  lib.rs  main.rs  patchset.rs  paths.rs  probe.rs  repair.rs  shim.rs  state.rs  tui.rs  types.rs  upstream.rs
tests/: dispatcher_acceptance.rs  state_activation.rs  terminal_acceptance.rs
tests/common/: mod.rs
tests/fixtures/: process_helper.rs
