[package]
name = "codex-patcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Launch-triggered source patcher and dispatcher for the OpenAI Codex CLI"
repository = "https://github.com/arm64be/codex-patcher"
readme = "README.md"

[[bin]]
name = "codex-patcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dialoguer = "0.11"
directories = "6.0"
fs2 = "0.4"
hex = "0.4"
libc = "0.2"
ratatui = "0.30"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.9"
unicode-normalization = "0.1"
uuid = { version = "1.17", features = ["v4", "serde"] }
wait-timeout = "0.2"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Console",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
portable-pty = "0.9"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
